--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,7 @@
-RP_NAME=Fingerprint Demo
+RP_NAME=HealthData
 RP_ID=localhost
 ORIGIN=http://localhost:5173
 PORT=4000
 SESSION_SECRET=super_secret
+DATABASE_URL="postgresql://neondb_owner:npg_6fmZdUHJsV7g@ep-damp-frost-ahyqie6f.c-3.us-east-1.aws.neon.tech/healthdata?sslmode=require&channel_binding=require"
+JWT_SECRET="supersecret"
