--- a/client/package.json
+++ b/client/package.json
@@ -17,12 +17,15 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.0",
     "react-router": "^7.9.5",
+    "react-router-dom": "^7.9.5",
+    "react-transition-group": "^4.4.5",
     "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@types/react-transition-group": "^4.4.12",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
