--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "activecondition",
+        "chartjs",
         "simplewebauthn"
     ],
     "postman.settings.dotenv-detection-notification-visibility": false
