--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,11 @@
     "@simplewebauthn/browser": "^13.2.2",
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.1",
+    "chart.js": "^4.5.1",
+    "chartjs-adapter-moment": "^1.0.1",
+    "moment": "^2.30.1",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.0",
     "react-router": "^7.9.5",
