--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.66.0",
     "react-router": "^7.9.5",
     "react-router-dom": "^7.9.5",
+    "react-toastify": "^11.0.5",
     "react-transition-group": "^4.4.5",
     "tailwindcss": "^4.1.16"
   },
