--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
         "chartjs",
         "simplewebauthn"
     ],
-    "postman.settings.dotenv-detection-notification-visibility": false
+    "postman.settings.dotenv-detection-notification-visibility": false,
+    "terminal.integrated.env.windows": {
+        "PATH": "E:\\nodejs;E:\\Git\\bin;E:\\Git\\cmd;${env:PATH}"
+    }
 }
