--- a/server/.env
+++ b/server/.env
@@ -4,4 +4,5 @@ ORIGIN=http://localhost:5173
 PORT=4000
 SESSION_SECRET=super_secret
 DATABASE_URL="postgresql://neondb_owner:npg_doSxn36JEuTN@ep-damp-frost-ahyqie6f-pooler.c-3.us-east-1.aws.neon.tech/healthdata?sslmode=require&channel_binding=require"
+DIRECT_URL="postgresql://neondb_owner:npg_doSxn36JEuTN@ep-damp-frost-ahyqie6f.c-3.us-east-1.aws.neon.tech/healthdata?sslmode=require&channel_binding=require"
 JWT_SECRET="supersecret"
