--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@simplewebauthn/browser": "^13.2.2",
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.1",
