--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
 RP_NAME=HealthData
 RP_ID=localhost
 ORIGIN=http://localhost:5173
+VERCEL_URL=https://healthdatad14.vercel.app
 PORT=4000
 SESSION_SECRET=super_secret
 DATABASE_URL="postgresql://neondb_owner:npg_doSxn36JEuTN@ep-damp-frost-ahyqie6f-pooler.c-3.us-east-1.aws.neon.tech/healthdata?sslmode=require&channel_binding=require&connection_limit=1"
