--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,9 +5,12 @@
         "chartjs",
         "diseaseplan",
         "faceapi",
+        "HSSK",
         "Mobilenetv",
         "resgister",
+        "SHQN",
         "simplewebauthn",
+        "streamifier",
         "tfjs",
         "vladmandic"
     ],
