--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.13.1",
     "chart.js": "^4.5.1",
     "chartjs-adapter-moment": "^1.0.1",
+    "date-fns": "^4.1.0",
     "moment": "^2.30.1",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.1",
@@ -26,6 +27,7 @@
     "react-toastify": "^11.0.5",
     "react-transition-group": "^4.4.5",
     "react-webcam": "^7.2.0",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
