--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
+    "streamifier": "^0.1.1",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
